2003-11-03  Bradley Bell  <btb@icculus.org>

	* main/bm.h, main/piggy.c, main/piggy.h: big pigsize is same for
	all d1 shareware - even though files are different!

	* main/bm.h, main/piggy.c, main/piggy.h: added big pigsize for
	shareware d1 v1.4

	* main/bm.h, main/piggy.c, main/piggy.h: added big pigsize for
	registered d1 v1.0

	* main/bm.h, main/piggy.c, main/piggy.h: added pigsize for
	registered d1 v1.0

2003-10-31  Martin Schaffner <maschaffner@gmx.ch>

	* main/movie.c: when no movies are found, divide by six the
	number of warning lines sent to stdout

2003-10-29  Martin Schaffner <maschaffner@gmx.ch>

	* include/byteswap.h: fix stupid copy/paste error

2003-10-24  Bradley Bell  <btb@icculus.org>

	* 2d/bitblt.c, 2d/ibitblt.c, include/gr.h, include/grdef.h: use
	gr_linear_rep_movsd_2x instead of almost identical
	gr_linear_movsd_double. Better since we have assembly versions.

2003-10-22  Martin Schaffner <maschaffner@gmx.ch>

	* main/gamemine.c, main/piggy.c: fix "psychedelic" walls
	in d1 prisons

2003-10-21  Martin Schaffner <maschaffner@gmx.ch>

	* main/gameseq.c, main/multi.c, main/multi.h: fix compilation
	error with --disable-network, move reset_network_objects()
	from gameseq.c to multi.c

2003-10-14  Bradley Bell  <btb@icculus.org>

	* AUTHORS, NEWS: stuff

	* arch/win32/ipx_mcast4.c: include newmenu header (for FAIL macro)

2003-10-12  Bradley Bell  <btb@icculus.org>

	* main/cntrlcen.c, main/endlevel.c, main/gamerend.c,
	main/gameseq.c, main/mission.c, main/mission.h, main/network.c:
	shareware stuff

2003-10-12  Aaron Plattner  <plattner@caltech.edu>

	* arch/linux/Makefile.am, arch/linux/ipx_bsd.c,
	arch/linux/ipx_kali.c, arch/linux/ipx_mcast4.c,
	arch/linux/ipx_udp.c, arch/linux/linuxnet.c,
	arch/linux/include/ipx_drv.h, arch/linux/include/ipx_mcast4.h,
	arch/win32/Makefile.am, arch/win32/ipx_drv.h,
	arch/win32/ipx_mcast4.c, arch/win32/ipx_udp.c,
	arch/win32/ipx_win.c, arch/win32/winnet.c,