@@ -1,4 +1,4 @@
-/* $Id: mission.h,v 1.13 2003-10-12 09:51:53 btb Exp $ */
+/* $Id: mission.h,v 1.14 2003-11-04 08:03:08 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -49,7 +49,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #ifndef _MISSION_H
 #define _MISSION_H
 
-#include <pstypes.h>
+#include "pstypes.h"
 
 #define MAX_MISSIONS                    300
 #define MAX_LEVELS_PER_MISSION          30
@@ -58,27 +58,29 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 
 #define D1_MISSION_FILENAME             "descent"
 #define D1_MISSION_NAME                 "Descent: First Strike"
-#define D1_MISSION_HOGSIZE              6856701
-#define D1_10_MISSION_HOGSIZE           7261423
+#define D1_MISSION_HOGSIZE              6856701 // v1.4 - 1.5
+#define D1_10_MISSION_HOGSIZE           7261423 // v1.0
 #define D1_MAC_MISSION_HOGSIZE          7456179
 #define D1_OEM_MISSION_NAME             "Destination Saturn"
-#define D1_OEM_MISSION_HOGSIZE          4492107
+#define D1_OEM_MISSION_HOGSIZE          4492107 // v1.4a
+#define D1_OEM_10_MISSION_HOGSIZE       4494862 // v1.0
 #define D1_SHAREWARE_MISSION_NAME       "Descent Demo"
-#define D1_SHAREWARE_MISSION_HOGSIZE    2339773
-#define D1_SHAREWARE_10_MISSION_HOGSIZE 2365676
+#define D1_SHAREWARE_MISSION_HOGSIZE    2339773 // v1.4
+#define D1_SHAREWARE_10_MISSION_HOGSIZE 2365676 // v1.0 - 1.2
 #define D1_MAC_SHARE_MISSION_HOGSIZE    3370339
 
 #define SHAREWARE_MISSION_FILENAME  "d2" //"d2demo"
 #define SHAREWARE_MISSION_NAME      "Descent 2 Demo"
-#define SHAREWARE_MISSION_HOGSIZE   2292566
+#define SHAREWARE_MISSION_HOGSIZE   2292566 // v1.0 (d2demo.hog)
 #define MAC_SHARE_MISSION_HOGSIZE   4292746
 
 #define OEM_MISSION_FILENAME        "d2"
 #define OEM_MISSION_NAME            "D2 Destination:Quartzon"
-#define OEM_MISSION_HOGSIZE         6132957
+#define OEM_MISSION_HOGSIZE         6132957 // v1.1
 
 #define FULL_MISSION_FILENAME       "d2"
-#define FULL_MISSION_HOGSIZE        7595079
+#define FULL_MISSION_HOGSIZE        7595079 // v1.1 - 1.2
+#define FULL_10_MISSION_HOGSIZE     7107354 // v1.0
 #define MAC_FULL_MISSION_HOGSIZE    7110007
 
 //mission list entry
